--- a/exercicios/ex003/index.html
+++ b/exercicios/ex003/index.html
@@ -9,8 +9,8 @@
     <h1>Como Colocar Imagens?</h1>
     <hr>
     <p>Hoje nós vamos aprender a inserir imagens em seu site usando a tag &lt;img&gt;</p>
-    <img src="image2.png" alt="Programador 1">
-    <img src="2017-06-01-00-00-46-576x384.jpg" alt="Programação 1">
-    <img src="developer.png" alt="Programador 2">
+    <img src="imagens/image2.png" alt="Programador 1">
+    <img src="imagens/2017-06-01-00-00-46-576x384.jpg" alt="Programação 1">
+    <img src="imagens/developer.png" alt="Programador 2">
 </body>
 </html>
