--- a/exercicios/ex006/index.html
+++ b/exercicios/ex006/index.html
@@ -18,6 +18,8 @@
     <h2>Tachado:</h2>
     <p><del>Este texto está tachado.</del></p>
     <br>
+    <h2>Sublinhado:</h2>
+    <p><ins>Acabei me esquecendo de sublinhar essa frase.</ins></p>
     <h2>Marcação:</h2>
     <p>Existe uma <mark>marcação</mark> neste texto.</p>
     <br>
@@ -38,9 +40,9 @@
     <br>
     <h3>Formatação "Livre":</h3>
     <pre><p>Neste   texto,  nós podemos 
-        brincar     um      pouco    sem    precisar     de tags
+            brincar     um      pouco    sem    precisar     de tags
 
-        Apenas    espaços e tabulações.
+            Apenas    espaços e tabulações.
     </p></pre>
     <br>
     <h2>Textos Pequenos:</h2>
