inicio_contagem_ol

--- a/exercicios/ex007/index.html
+++ b/exercicios/ex007/index.html
@@ -103,5 +103,13 @@
                 <li>Back-End</li>
             </ul>
     </ol>
+    <br>
+    <h2>Escolhendo Ponto de Início de Contagem da Lista</h2>
+    <ol type="1" start = 53>
+        <li>Estou gostando bastante disso.</li>
+        <li>Acho que essa é a minha vocação.</li>
+        <li>Não porque eu sou "muito bom" nisso.</li>
+        <li>Mas porque eu amo fazê-lo.</li>
+    </ol>
 </body>
 </html>
