--- a/exercicios/ex008/index.html
+++ b/exercicios/ex008/index.html
@@ -28,5 +28,13 @@
         <!-- Geralmente os navegadores não realizam o download automático de arquivos .pdf-->
          <li type="square">Para fazer o dowanload do arquivo.zip, basta clicar <a href="./pdf/meulivro.zip" download="meulivro.zip" type="application/zip">aqui</a>.</li>
     </ul>
+<br>
+<h2>Imagem com Link</h2>
+<p>Também é possível usar imagens como link.</p>
+<a href="https://www.w3schools.com/html" hreflang="en" target="_blank" rel="external">
+<img src="html-250.png" alt="www.w3schools.com/html">
+</a>
+<br>
+
 </body>
 </html>
